--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "gen": "openapi-ts",
     "sync:patch": "node lib/scripts/sync-patch.js",
     "sync:version": "node lib/scripts/sync-version.js",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "build": "tsc -p tsconfig.json",
     "prepublishOnly": "pnpm gen && pnpm build"
   },
   "devDependencies": {
     "@hey-api/openapi-ts": "^0.87.5",
+    "eslint": "^9.39.1",
     "node-fetch": "^3.3.2",
+    "prettier": "^3.6.2",
     "typescript": "^5.9.3",
     "yaml": "^2.8.1"
   }
