Add OpenAPI update check script and fix YAML parsing
Introduces a new script (check-update.js) to compare and update the local OpenAPI version, adds the corresponding npm script, and corrects YAML parsing in getOpenApiVersion to use YAML.parse instead of yaml.load.

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   ],
   "scripts": {
     "gen": "openapi-ts",
+    "check-update": "node lib/scripts/check-update.js",
     "sync:patch": "node lib/scripts/sync-patch.js",
     "sync:version": "node lib/scripts/sync-version.js",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
