Add CI scripts for check, update, and generate
Introduced new scripts (ci-check.js, ci-update.js, ci-generate.js) for CI automation, updated imports to use explicit .js extensions, and added corresponding npm scripts in package.json to streamline SDK generation and validation in CI workflows.

--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   ],
   "scripts": {
     "gen": "openapi-ts",
-    "check-update": "node lib/scripts/check-update.js",
+    "ci:check": "node lib/scripts/ci-check.js",
+    "ci:update": "node lib/scripts/ci-update.js",
+    "ci:generate": "node lib/scripts/ci-generate.js",
     "sync:patch": "node lib/scripts/sync-patch.js",
     "sync:version": "node lib/scripts/sync-version.js",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
