--- a/.github/workflows/daily-openapi.yml
+++ b/.github/workflows/daily-openapi.yml
@@ -57,7 +57,7 @@ jobs:
           git config user.name "github-actions"
           git config user.email "actions@github.com"
           git checkout -b openapi-update-$VERSION
-          git add patches/ package.json sdks/
+          git add patches/ package.json openapi/src/generated
           git commit -m "🤖 Update OpenAPI patch, version & SDKs to v$VERSION"
           git push -u origin openapi-update-$VERSION
 
