--- a/.github/workflows/daily-openapi.yml
+++ b/.github/workflows/daily-openapi.yml
@@ -1,4 +1,6 @@
 name: Daily OpenAPI Update
+permissions:
+  contents: write
 
 on:
   schedule:
@@ -13,6 +15,9 @@ jobs:
       # 1. Checkout repo
       - name: Checkout repo
         uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          fetch-depth: 0
 
       # 2. Setup Node.js
       - name: Setup Node.js
