--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,18 @@
 {
   "compilerOptions": {
     "outDir": "dist",
+    "rootDir": "src",
     "declaration": true,
+    "declarationDir": "dist",
     "module": "ESNext",
     "target": "ES2020",
     "moduleResolution": "Bundler",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true
   },
-  "publishConfig": {
-    "directory": "dist"
-  },
-  "include": ["src/openapi/generated"]
+  "include": ["src"],
+  "exclude": ["dist", "node_modules"]
 }
